--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/moment": "^1.3.8",
     "@mapbox/polyline": "^1.0.0",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/pickers": "^3.1.2",
+    "@progress/kendo-react-dateinputs": "^3.2.2",
     "algolia-places-react": "^1.4.0",
     "axios": "^0.18.0",
     "babel-preset-env": "^1.7.0",
@@ -14,10 +17,15 @@
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.10.0",
     "jest-fetch-mock": "^2.1.1",
-    "moment": "^2.22.2",
+    "json-loader": "^0.5.7",
+    "material-ui-pickers": "^2.2.4",
+    "material-ui-time-picker": "^1.2.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.14",
     "ol": "^5.1.3",
     "places.js": "^1.7.3",
     "prop-types": "^15.6.2",
+    "rc-time-picker": "^3.7.1",
     "react": "^16.4.1",
     "react-alert": "^4.0.4",
     "react-autocomplete-input": "^1.0.10",
@@ -34,6 +42,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-times": "^3.1.12",
     "react-transition-group": "^2.4.0",
     "typeface-roboto": "0.0.54"
   },
